Added some TODOs.

--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -1606,12 +1606,23 @@ which completes the derivation of \Cref{fwd_evar1}. To obtain \Cref{fwd_evar2} w
 	\end{enumerate}
 \end{enumerate}
 
+\subsection{Need to add}
+\begin{enumerate}
+\item Summary of results from noisy MCMC literature.
+\item Try working out results that compare the ratio of the approx density at two points across different approximations; 
+alternatively could consider deriving these results for the normalized densities. 
+\item Include result that sample and marginal approx agree at the design points.
+\item Include existence results (check existence result from that new paper)
+\item Viewing noisy MCMC approaches as approximations to the sample-based posterior.
+\item Different views of noisy MCMC approaches, including extending the state space. How does this alg compare to the 
+marginal and mcwmh-ind algs? 
+\end{enumerate}
+
 \subsection{Emulator Ideas}
 \begin{enumerate}
 \item Sum of quadratic kernel, Gaussian kernel, and some sort of flat/linear kernel (i.e. something with very long lengthscales) to capture the 
 part of the response surface that "flattens" out. 
 \end{enumerate}
-
 
 \subsection{Notation}
 \begin{enumerate}
@@ -1660,15 +1671,6 @@ variables. I should probably include Lorenz-63 to have a more familiar example t
 \item Banana, unimodal, bimodal, unidentifiable
 \item Heat equation (see Sinsbeck and Nowak) 
 \item VSEM
-\end{enumerate}
-
-\subsection{Need to add}
-\begin{enumerate}
-\item Summary of results from noisy MCMC literature.
-\item Try working out results that compare the ratio of the approx density at two points across different approximations; 
-alternatively could consider deriving these results for the normalized densities. 
-\item Include result that sample and marginal approx agree at the design points.
-\item Include existence results (check existence result from that new paper)
 \end{enumerate}
 
 \subsection{Things to consider trying}
